sc-common/namespace-activator/base/mongo.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: sc-common
  labels:
    app: mongo
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 4
  paused: false
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
      containers:
      - name: mongo
        image: docker.io/mongo:6
        imagePullPolicy: Always
        ports:
        - containerPort: 27017
          name: mongo
          protocol: TCP
        volumeMounts:
        - name: mongodb-data-pv
          mountPath: /data/db
          readOnly: false
        resources:
          limits:
            cpu: 4000m
            memory: 4Gi
          requests:
            cpu: 100m
            memory: 128Mi
      volumes:
      - name: mongodb-data-pv
        persistentVolumeClaim:
          claimName: single-mongo-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: sc-common
  labels:
    app: mongo
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: mongo
  selector:
    app: mongo
